Fix title bar padding on mobile

--- a/app/static/master.css
+++ b/app/static/master.css
@@ -681,5 +681,5 @@ footer {display: none;}
 	footer{display: block;}
 }
 @media screen and (max-width: 400px) { 
-	.mobile-title h1 {padding-top: 10px;}
+	.navlogo h1 {padding-top: 10px;}
 }
